# yt-sentiment-analysis

./: .gitignore  README.md  pyproject.toml  requirements-conda.txt
yt_sentiment_analysis/: __init__.py  constants.py
yt_sentiment_analysis/data/raw_dynamodb_data/: yt_sentiment_analysis_sample.csv
yt_sentiment_analysis/data/test_data/: YouTubeTranscriptApi_get_transcripts_EwTZ2xpQwpA_Ka4coAT3YQ4.json  transcripts_EwTZ2xpQwpA_Ka4coAT3YQ4.json  ytapiresp_get_top_videos_by_category.json
yt_sentiment_analysis/src/: __main__.py  get_data.py
yt_sentiment_analysis/tests/: test_MyCustomFormatter.py  test_decorators.py  test_dynamo_db.py  test_get_data.py  test_src.py
yt_sentiment_analysis/utils/: decorators.py  dynamo_db.py  get_logger.py  utils.py
